--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" href="/turplanlegger/static/img/16/map_pins.png">
+  <link rel="icon" href="/static/favicon.png">
   <title>MinGeo: Hvor er jeg?</title>
 
   <!-- JS -->
@@ -14,13 +14,13 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js"></script>
 
-  <script src="main.js" type="text/javascript"></script>
+  <script src="/static/main.js" type="text/javascript"></script>
 
   <!-- CSS -->
   <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.min.css" type="text/css" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-  <link href="main.css" rel="stylesheet">
+  <link href="/static/main.css" rel="stylesheet">
  </head>
 
  <body>
