fixed #4 - dms conversion

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,12 @@
   <tr>
    <td><i class="fa fa-arrows-h"></i></td>
    <td>Breddegrad</td>
-   <td id="latitude"></td>
+   <td id="latitude"><span></span><span></span></td>
   </tr>
   <tr>
    <td><i class="fa fa-arrows-v"></i></td>
    <td>Lengdegrad</td>
-   <td id="longitude"></td>
+   <td id="longitude"><span></span><span></span></td>
   </tr>
   <tr>
    <td><i class="fa fa-chevron-up"></i></td>
