--- a/static/main.css
+++ b/static/main.css
@@ -80,6 +80,7 @@ div.card > table tr > td,
 div.card > table tr > th {
 	color:					#616161;
 	padding:				7px 5px 7px 5px;
+	vertical-align: 		top;
 }
 div.card > table tr > th {
 	font-weight:			bold;
@@ -105,11 +106,24 @@ div.card.location > table tr > td:nth-child(1) > i.fa {
 }
 div.card.location > table tr > td:nth-child(2) {
 	padding-right:			50px;
-	width:					150px;
+	width:					130px;
 	font-weight:			bold;
 }
 div.card.location > table tr > td:nth-child(3) {
 	width:					100%;
+}
+div.card.location > table tr > td:nth-child(3) > span {
+	margin-top:				3px;
+}
+div.card.location > table tr > td:nth-child(3) > span:nth-child(2) {
+	color:					#999;
+	margin-left:			20px;
+}
+@media only screen and (max-width: 40em) {
+	div.card.location > table tr > td:nth-child(3) > span:nth-child(2) {
+		display:				block;
+		margin-left:			0;
+	}
 }
 div.card.location > table tr > td:nth-child(3) i {
 	float:					right;
