--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="/static/favicon.png">
-  <title>Hvor er jeg?</title>
+  <title>Hvor er jeg?{% block title %}{% endblock %}</title>
 
   <!-- CSS -->
   <link type="text/css" href="/static/foundation-5.3.1.min.css" rel="stylesheet">
@@ -45,3 +45,20 @@
    <div class="row">
     <div class="small-0 medium-2 columns show-for-medium-up"></div>
     <div class="small-12 medium-8 columns" id="main">
+     <!-- Content -->
+     {% block content %}{% endblock %}
+
+     <!-- Footer -->
+     <footer>
+      <i class="fa fa-paw"></i>
+      <a href="http://www.petterhj.net">Petter Holt Juliussen</a>
+      <i class="fa fa-github"></i>
+      <a href="https://github.com/petterhj/mingeo">GitHub</a>
+     </footer>
+
+    </div>
+    <div class="small-0 medium-2 columns show-for-medium-up"></div>
+   </div>
+  </div>
+ </body>
+</html>
