--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-
 <!-- Location -->
 <div class="card location">
  <div class="title">
@@ -58,3 +57,4 @@
  <p><i class="fa fa-user"></i> Ingen identifiserende <b>personopplysninger</b> lagres eller prosesseres av denne tjenesten. Det eneste som eventuelt registreres (selvvalgt) er breddegrad, lengegrad, høyde, tidspunkt og nøyaktighet (i meter).</p>
  <p><i class="fa fa-support"></i> Delte posisjoner kan <a href="/monitor">følges her</a>.</p>
 </div>
+{% endblock %}
