--- a/templates/monitor.html
+++ b/templates/monitor.html
@@ -70,4 +70,9 @@ $(document).ready(function() {
   <tbody></tbody>
  </table>
 </div>
+
+<!-- Location -->
+<div class="card back">
+ <a class="button" href="/"><i class="fa fa-map-marker"></i>Min posisjon</a>
+</div>
 {% endblock %}
