changed button label

--- a/templates/monitor.html
+++ b/templates/monitor.html
@@ -73,6 +73,6 @@ $(document).ready(function() {
 
 <!-- Location -->
 <div class="card back">
- <a class="button" href="/"><i class="fa fa-map-marker"></i>Min posisjon</a>
+ <a class="button" href="/"><i class="fa fa-map-marker"></i>Tilbake til min posisjon</a>
 </div>
 {% endblock %}
