--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Hvor er jeg? Finn din gjeldende geografiske posisjon via nettleseren.">
   <meta name="keywords" content="lokasjon, min posisjon, hvor er jeg, geolocation, geografi">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#0085B2">
 
   <link rel="icon" href="/static/favicon.png">
   <title>Hvor er jeg?{% block title %}{% endblock %}</title>
