share by email (link)

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,4 +57,11 @@
  <p><i class="fa fa-user"></i> Ingen identifiserende <b>personopplysninger</b> lagres eller prosesseres av denne tjenesten. Det eneste som eventuelt registreres (selvvalgt) er breddegrad, lengegrad, høyde, tidspunkt og nøyaktighet (i meter).</p>
  <p><i class="fa fa-support"></i> Delte posisjoner kan <a href="/monitor">følges her</a>.</p>
 </div>
+
+{# Share to email #}
+{% if share_address %}
+ <script type="text/javascript">
+    LOC.shareAddress = '{{ share_address }}';
+ </script>
+{% endif %}
 {% endblock %}
