migrate to leaflet

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,15 @@
   <link type="text/css" href="{{ url_for('static', filename='foundation-5.3.1.min.css') }}" rel="stylesheet">
   <link type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
+  <link type="text/css" href="{{ url_for('static', filename='leaflet.css') }}" rel="stylesheet">
   <link type="text/css" href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
 
   <!-- JS -->
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='modernizr-2.8.3.min.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='jquery-2.1.1.min.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='foundation-5.3.1.min.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='leaflet.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='leaflet.geocoder.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='moment-2.8.1.min.js') }}"></script>
 
   <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
