--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 </div>
 
 <!-- Map -->
-<div class="card map"></div>
+<div id="map" class="card map"></div>
 
 <!-- Info -->
 <div class="card info">
