--- a/templates/monitor.html
+++ b/templates/monitor.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %} | Monitor{% endblock %}
-{% block content %}
 
+{% block js %}
+  MON.init($('div.card.monitor'));
+{% endblock %}
+
+{% block content %}
 <!-- Monitor -->
 <div class="card monitor">
  <div class="title">
